<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/app_name"
        android:icon="@mipmap/ic_launcher"
        android:summary="@string/application_url">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/application_url" />
    </Preference>

    <Preference
        android:key="applicationVersion"
        android:title="@string/Version"/>
    <!--android:summary="@string/version_name"-->

    <Preference
        android:key="applicationDevelopedBy"
        android:title="@string/Developed_by"
        android:summary="@string/inspire_url">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/inspire_url" />
    </Preference>

    <Preference
        android:key="rateUs"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/Love_the_app"
        android:summary="@string/Rate_us"/>

    <Preference
        android:key="share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/Tell_the_world"
        android:summary="@string/Share_with_your_friends"/>

</PreferenceScreen>