<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_player_name"
        android:text="@string/Name"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_player_algorithm"
        android:text="@string/Selected_algorithm"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_player_color"
        android:text="@string/Color"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>