<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="org.inspirecenter.amazechallenge.ui.AddPlayerActivity">

    <TextView
        android:text="@string/Name"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/activity_add_player_name_edit_text"
        android:inputType="text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/Name"
        android:tag="@string/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/Algorithm"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/activity_add_player_algorithm_spinner"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/Color"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/activity_add_player_color_spinner"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_add_player_cancel_button"
            android:text="@string/Cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/activity_add_player_save_button"
            android:text="@string/Save"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>