<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.inspirecenter.amazechallenge.ui.QuestionnaireActivity">

    <RelativeLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:id="@+id/instructions_card"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/ditheredGray"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionnaire"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:id="@+id/questionnaire_title"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/questionnaire_title"
                    android:text="@string/questionnaire_instructions_title"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/questionnaire_instructions_title"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/instructions_body"
                    android:layout_below="@id/questionnaire_instructions_title"
                    android:lines="6"
                    android:textColor="@android:color/black"
                    android:text="@string/questionnaire_instructions_body"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Skip"
                    android:background="@color/materialRed"
                    android:textColor="@color/white"
                    android:layout_below="@id/instructions_body"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"

                    />

            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question1_layout"
            android:layout_below="@id/instructions_card"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="@android:color/black"
                android:id="@+id/question_1"
                />

            <RatingBar
                android:id="@+id/answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_below="@+id/question_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_no"
                android:layout_below="@id/answer_1"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_yes"
                android:layout_below="@id/answer_1"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider_q1_2"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/question1_layout"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_q1_2"
            android:id="@+id/question2_layout"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:textColor="@android:color/black"
                android:id="@+id/question_2"
                />

            <Spinner
                android:id="@+id/answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question_2"
                android:layout_centerHorizontal="true"
                android:entries="@array/question2_entries"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider_q2_3"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/question2_layout"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_q2_3"
            android:id="@+id/question3_layout"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textColor="@android:color/black"
                android:id="@+id/question_3"
                />

            <RatingBar
                android:id="@+id/answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:numStars="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_no"
                android:layout_below="@id/answer_3"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_yes"
                android:layout_below="@id/answer_3"
                android:layout_alignParentEnd="true"
                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider_q3_4"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/question3_layout"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_q3_4"
            android:id="@+id/question4_layout"
            android:layout_marginTop="20dp"
            >

            <!--TODO -->


        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="30dp"
            android:layout_below="@id/divider_q3_4"
            android:background="@color/materialBlue"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            />


    </RelativeLayout>

</ScrollView>
