<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.inspirecenter.amazechallenge.ui.TrainingActivity">

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!--
            <ImageView
                android:id="@+id/activity_training_user_image"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/User_image"
                app:srcCompat="@drawable/ic_person_outline_black_24dp" />
                -->

            <org.inspirecenter.amazechallenge.ui.GIFView
                android:id="@+id/activity_training_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:contentDescription="@string/User_image">
            </org.inspirecenter.amazechallenge.ui.GIFView>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/activity_training_user_name"
                    android:text="@string/Name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/activity_training_user_email"
                    android:text="@string/Email"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:text="@string/Select_challenge"
        style="@style/TextAppearance.AppCompat.Body1"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_training_mazes_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
